--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Tz+p18BfKox6wEmxljrNQIHw/BnS9uUVU+9n2FQjfrQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://vanphongpham89.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=vanphongpham
 DB_USERNAME=root
 DB_PASSWORD=
 
