--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "unisharp/laravel-filemanager": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
